<resources>


    <string name="app_name">Parent Feedback</string>

    <string-array name="branch">
        <item>SELECT</item>
        <item>CSE</item>
        <item>IT</item>
        <item>ECE</item>
        <item>EIE</item>
    </string-array>

    <string-array name="section1">
        <item>SELECT</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
    </string-array>

    <string-array name="section2">
        <item>SELECT</item>
        <item>A</item>
    </string-array>

    <string-array name="section3">
        <item>SELECT</item>
        <item>A</item>
        <item>B</item>
    </string-array>

    <string-array name="year">
        <item>SELECT</item>
        <item>I</item>
        <item>II</item>
        <item>III</item>
        <item>IV</item>
    </string-array>

    <string-array name="occupation">
        <item>SELECT</item>
        <item>Employee</item>
        <item>Self Employed</item>
        <item>Others</item>
    </string-array>

    <string name="Q1">Getting admission in the college for my ward is a matter of pride for me.</string>
    <string name="Q2">The admission process in the college is fair and accurate.</string>
    <string name="Q3">My ward is improving his knowledge through interaction with Faculty of the college.</string>
    <string name="Q4">The discipline in the college is good.</string>
    <string name="Q5">The atmosphere in the college is conducive for learning.</string>
    <string name="Q6">There is a positive change in the behaviour of my ward after joining the college.</string>
    <string name="Q7">I have great respect for KMIT.</string>
    <string name="Q8">Do you rate KMIT as one of the best colleges among the JNTU affiliated​ colleges.</string>
    <string name="Q9">The college information is accessible to all.</string>
    <string name="Q10">KMIT website and Sanjaya App is very informative and is regularly updated.</string>
    <string name="Q11">The curriculum of the course is well designed and promotes learning experience of the students.</string>
    <string name="Q12">Employability is given focus in the curriculum design.</string>
    <string name="Q13">Curriculum incorporates latest technological advancements in the industry.</string>
    <string name="Q14">Examination results are intimidated timely.</string>
    <string name="Q15">The college Staff are cooperative.</string>

    <string name="rating5">1 STAR</string>
    <string name="rating4">2 STAR</string>
    <string name="rating3">3 STAR</string>
    <string name="rating2">4 STAR</string>
    <string name="rating1">5 STAR</string>

    <string name="remark5">POOR</string>
    <string name="remark4">SATISFACTORY</string>
    <string name="remark3">GOOD</string>
    <string name="remark2">VERY GOOD</string>
    <string name="remark1">EXCELLENT</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_upload_data">UploadData</string>

    <string name="u1">Uploading Parent Data</string>
    <string name="u2">Uploading Rating Data</string>
    <string name="u3">Upload Complete</string>

    <string name="next">NEXT</string>

    <array name="question_number">
        <item>Select Question</item>
        <item>Q1</item>
        <item>Q2</item>
        <item>Q3</item>
        <item>Q4</item>
        <item>Q5</item>
        <item>Q6</item>
        <item>Q7</item>
        <item>Q8</item>
        <item>Q9</item>
        <item>Q10</item>
        <item>Q11</item>
        <item>Q12</item>
        <item>Q13</item>
        <item>Q14</item>
        <item>Q15</item>
    </array>
</resources>
