<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_feedback1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.feedback.MainActivity">


    <TextView
        android:text="QUESTION 1:"
        android:layout_width="150dp"
        android:id="@+id/textView6"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_height="60dp"
        android:paddingTop="10dp"
        android:id="@+id/textView7"
        android:text="@string/Q1"
        android:textSize="20sp"
        android:layout_width="300dp"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <TextView
        android:text="@string/rating1"
        android:layout_height="30dp"
        android:layout_below="@+id/ratingBar"
        android:layout_alignStart="@+id/ratingBar"
        android:layout_marginTop="21dp"
        android:id="@+id/textView8"
        android:layout_width="50dp" />

    <TextView
        android:text="@string/rating2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:id="@+id/textView10" />

    <TextView
        android:text="@string/remark2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:layout_alignBaseline="@+id/textView10"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignStart="@+id/textView9" />

    <TextView
        android:text="@string/rating3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_alignStart="@+id/textView10"
        android:layout_marginTop="13dp"
        android:id="@+id/textView12" />

    <TextView
        android:text="@string/remark3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView12"
        android:layout_alignStart="@+id/textView11"
        android:id="@+id/textView13" />

    <TextView
        android:text="@string/rating4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView12"
        android:layout_alignStart="@+id/textView12"
        android:layout_marginTop="10dp"
        android:id="@+id/textView14" />

    <TextView
        android:text="@string/remark4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView14"
        android:layout_alignStart="@+id/textView13"
        android:id="@+id/textView15" />

    <TextView
        android:text="@string/rating5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView14"
        android:layout_alignStart="@+id/textView14"
        android:layout_marginTop="13dp"
        android:id="@+id/textView16" />

    <TextView
        android:text="@string/remark5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView16"
        android:layout_alignStart="@+id/textView15"
        android:id="@+id/textView17" />

    <Button
        android:text="NEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:onClick="gotoFeedback2Page"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp" />

    <TextView
        android:text="@string/remark1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignEnd="@+id/button2" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:stepSize="1"/>
</RelativeLayout>
